--- a/lxlabs/kloxo/file/centos-5/nginx.conf
+++ b/lxlabs/kloxo/file/centos-5/nginx.conf
@@ -36,12 +36,12 @@ http {
     tcp_nodelay        on;
 
 
-    gzip                on; #Использование сжатия статики (Пример: CSS)
+    gzip                on;
     gzip_proxied        any;
     gzip_min_length     1100;
     gzip_http_version   1.0;
     gzip_buffers        4 8k;
-    gzip_comp_level     4; #Степень сжатия (больше ставить смысла нет, нагрузка на ЦПУ растет, а файлы меньше не практически становятся)
+    gzip_comp_level     4;
     gzip_types          text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
 
